--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,9 @@
         "string_view": "c",
         "unordered_map": "c",
         "vector": "c",
-        "utility": "c"
+        "utility": "c",
+        "__bit_reference": "c",
+        "chrono": "c",
+        "algorithm": "c"
     }
 }
